# adventOfCode2024

./: .gitignore  CMakeLists.txt  README.md  day1.c
src/: arrayList.c  arrayList.h  day2.c  day2.h  graph.c  graph.h  helpers.c  helpers.h  linkedList.c  linkedList.h  main.c  text.c  text.h
src/days/: day1.c  day1.h  day2.c  day3.c  day3.h  day4.c  day4.h  day5.c  day5.h  day6.c  day6.h
tests/: main.test.c
